fixed related post alignment

--- a/style.css
+++ b/style.css
@@ -108,6 +108,9 @@ li {
 	margin-bottom: 10px;
 	/* display: inline; */
 }
+li:first-child {
+	padding-top: 5px;
+}
 
 /* this will make it so the last line item will have no space */
 li:last-child {
@@ -155,7 +158,8 @@ li:last-child {
 /*aside is a short hand property*/
 aside {
 	width: 500px;
-	float: right;
+	height: 450px;
+	/* float: right; */
 	background-color: #d8d3dc;
 	border-top: 5pt solid #8b44a4;
 	border-bottom: 5pt solid #8b44a4;
@@ -238,7 +242,7 @@ footer p {
 
 nav a:link {
 	margin-right: 50px;
-	margin-top: 10px;
+	/* margin-top: 10px; */
 	display: inline-block;
 	/*background-color: orangered ;
 	margin: 20px;
@@ -302,7 +306,7 @@ h2::after {
 }
 
 /* FLOATS */
-.blondebomshell {
+/* .blondebomshell {
 	float: left;
 	margin-bottom: 20px;
 }
@@ -323,15 +327,14 @@ nav {
 
 /* .clear fix hack  will create a brand new element that will be the 
 LAST child of the container */
-.clearfix::after {
+/* .clearfix::after {
 	clear: both;
 	 content: '';
 	 display: block;
-}
+} */
 /* clearing floats only work on block elements  */
 
-
-article {
+/* article {
 	width: 780px;
 	float: left ;
 }
@@ -340,4 +343,50 @@ article {
 
 footer {
 clear: both;
+} */
+
+/* FLEXBOX */
+.main-header {
+	display: flex;
+	/* the is the container */
+	align-items: center;
+	/* 👇🏾align items horizontally by default👇🏾 */
+	justify-content: space-between;
+}
+
+.authorbox {
+	display: flex;
+	align-items: center;
+	margin-bottom: 15px;
+}
+
+.author {
+	margin-bottom: 0;
+	margin-left: 15px;
+}
+
+.relatedpost {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+	margin-bottom: 30px;
+}
+
+.relatedpost :first-child {
+	margin-top: 30px;
+}
+.relatedlink {
+	/* we need to use the link pseudo class */
+	font-size: 17px;
+	font-weight: bolder;
+	font-style: normal;
+	margin-bottom: 5px;
+	/* 👇🏾anchor is a inline element so vertical spacing does not  apply so we will display as block */
+	display: block;
+}
+.related-author {
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: normal;
+	font-style: italic;
 }
